--- a/index.html
+++ b/index.html
@@ -8,38 +8,41 @@
 </head>
 
 <body>
-    <div class="form-container">
-      <h2>Formulario de Registración</h2>
-      <form id="registroForm">
-        <label>Apellido:
-          <input type="text" id="apellido" required>
-        </label>
-        <label>Nombre:
-          <input type="text" id="nombre" required>
-        </label>
-        <label>DNI:
-          <input type="text" id="dni" maxlength="8" required>
-        </label>
-        <label>Fecha de Nacimiento:
-          <input type="date" id="fechaNacimiento" required>
-        </label>
-        <label>Email:
-          <input type="email" id="email" required>
-        </label>
-        <button type="submit">Registrar</button>
-      </form>
-      <button id="botonDePreguntas">Responder Preguntas</button>
-        <label>Nombre de tu mascota:
-            <input type="text" id="nombreDeMascota" requiered>
-        </label>
-        <label>Color favorito:
-            <input type="text" id="ColorFavortio" requiered>
-        </label>
-        <label>Nacionalidad:
-            <input type="text" id="nacionalidad" required>
-        </label>
-      <div id="respuestas"></div>
+  <div class="form-container">
+    <h2>Formulario de Registración</h2>
+    <form id="registroForm">
+      <label>Apellido:
+        <input type="text" id="apellido" name="apellido" required>
+        <span id="errorApellido" class="error"></span>
+      </label>
+      <label>Nombre:
+        <input type="text" id="nombre" name="nombre" required>
+        <span id="errorNombre" class="error"></span>
+      </label>
+      <label>DNI:
+        <input type="text" id="dni" name="dni" maxlength="8" required>
+        <span id="errorDni" class="error"></span>
+      </label>
+      <label>Fecha de Nacimiento:
+        <input type="date" id="fechaNacimiento" name="fechaNacimiento" required>
+        <span id="errorFechaNacimiento" class="error"></span>
+      </label>
+      <label>Email:
+        <input type="email" id="email" name="email" required>
+        <span id="errorEmail" class="error"></span>
+      </label>
+      <button type="submit">Registrar</button>
+    </form>
+
+    <button id="btnPreguntasProgresivas">Responder Preguntas</button>
+
+    <div id="respuestasProgresivas" style="display:none;">
+      <p id="respuesta1"></p>
+      <p id="respuesta2"></p>
+      <p id="respuesta3"></p>
     </div>
-    <script src="script.js"></script>
-  </body>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
